# ocaml_chat

./: .gitignore  README.md  dune-project  ocaml_chat.opam
.github/workflows/: build-deploy.yml
lib/: dune
static/: chat.js  style.css
test/: dune
